Added folder & README

--- a/cc_credit_card.ipynb
+++ b/cc_credit_card.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c3fc1f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe12a51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "af434988",
    "metadata": {},
@@ -38,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e5071fb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder.config(conf=conf).getOrCreate()\n",
-    "df = spark.read.json('raw_cc_credit_card')"
+    "df = spark.read.json('raw_cc_credit_card/raw_cc_credit_card')"
    ]
   },
   {
