--- a/cc_credit_card.ipynb
+++ b/cc_credit_card.ipynb
@@ -851,7 +851,7 @@
    "id": "54ce0864",
    "metadata": {},
    "source": [
-    "#### loaded into currated zone for further transformation/ analysis </br> note: No data partition "
+    "#### loaded into currated zone for further transformation/ analysis </br> note: No date partition "
    ]
   },
   {
